@@ -40,6 +40,13 @@ def test_asset_host_allows_specifying_full_host(app_request):
     assert request.asset_host == 'http://assets.example.com'
 
 
+def test_asset_host_supports_url_prefix(app_request):
+    app, request = app_request
+    app.config.registry.settings['asset_prefix'] = '/assets'
+    request.application_url = 'http://example.com/foo'
+    assert request.asset_host == 'http://example.com/foo/assets'
+
+
 def test_acceptable_pagination_should_not_redirect(testserver):
     resp = requests.get('%s/artikel/03/seite-3' % testserver.url,
                         allow_redirects=False)
